testsuite/tests/parser/should_fail/ExportCommaComma.hs

module ExportCommaComma (id, reverse,,) where

