testsuite/tests/parser/should_fail/ExportCommaComma.stderr

ExportCommaComma.hs:2:38: error:
    parse error on input ‘,’ (possibly incorrect indentation or mismatched brackets)
